<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">DYEL-NET</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    
    <!-- Strings Added By Suna -->
    <string name="user_create_enter">Enter Here!</string>
    <string name="user_create_submit">Submit!</string>
    <string name="user_create_message">DYELNet message : Enter your information.</string>
    <string name="user_name">Username</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="date_of_birth">Date of Birth</string>
    <string name="pick_date">Click to Pick DOB</string>
    <string name="location">Location</string>
    <string name="creategoal_category">Select Goal Category</string>
    <string-array name="category_arrays">
        <item>Loose Weight</item>
        <item>Loose Fat</item>
        <item>Stay Healthy</item>
        <item>Enhance Cardio</item>
    </string-array>
    <string-array name="category_hash_arrays">
        <item>Same As</item>
        <item>Less Than</item>
        <item>More Than</item>
    </string-array>

</resources>